<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexandramukhina.just_java.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


                <AutoCompleteTextView
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/autocomplete_names"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:dropDownWidth="fill_parent"
                    android:hint="@string/order_summary_name"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorPrimary" />
                <!--<EditText-->
            <!--android:id="@+id/textName"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColorHint="@color/colorPrimary"-->
            <!--android:textColorLink="@color/colorPrimaryDark"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:hint="Name" />-->


            <TextView
                android:id="@+id/textViewTopping"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/toppings"
               style="@style/HeaderTextStyle"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBoxChoco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <Button
                    style = "@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/button3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textColor="@color/ColorSecondary"
                    android:theme="@style/MyButton"
                    android:onClick="decrement"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="1"
                    android:textColor="#212121"
                    android:textSize="16sp" />


                <Button
                    style = "@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/button"
                    android:layout_width="48dp"
                    android:textColor="@color/ColorSecondary"
                    android:theme="@style/MyButton"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+" />
            </LinearLayout>


            <!--<TextView-->
                <!--android:id="@+id/textView5"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginTop="15dp"-->
                <!--style="@style/HeaderTextStyle"-->
                <!--android:text="@string/OrderSummary" />-->

            <!--<TextView-->
                <!--android:id="@+id/order_summary_text_view"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="0" />-->

            <Button
                android:id="@+id/button2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:theme="@style/MyRaisedButton"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="40dp" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>


